[tool.poetry]
name = "cipher_ajz2123"
version = "0.1.0"
description = "This is a QMSS package test run with a cipher function to encrypt user input."
authors = ["Alys-217 <ajz2123@tc.columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
